# netbox-dlm

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
netbox_dlm/: __init__.py  filtersets.py  forms.py  models.py  scripts.py  tables.py  urls.py  views.py
netbox_dlm.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
netbox_dlm/api/: serializers.py  views.py
netbox_dlm/migrations/: 0001_initial.py  0002_validatedsoftware_platforms.py
netbox_dlm/templates/netbox_dlm/: contract.html  cve.html  device_lifecycle_panel.html  devicesoftware.html  devicetype_lifecycle_panel.html  provider.html  softwareimagefile.html  softwareversion.html  validatedsoftware.html  vulnerability.html
netbox_lifecycle/: __init__.py  admin.py  models.py  navigation.py  template_content.py
netbox_lifecycle/api/: serializers.py  urls.py
netbox_lifecycle/graphql/: schema.py
netbox_lifecycle/templates/netbox_lifecycle/: devicetype_lifecycle_panel.html
scripts/: check_templates.py  setup-test-env.sh  test-templates.sh
