[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-dlm"
version = "0.4.0"
description = "Device/software/hardware lifecycle management plugin for NetBox"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Blake Parker", email = "blake.parker@e280.com" },
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Networking",
]
dependencies = [
    "requests>=2.28,<3.0",
]

[project.urls]
Homepage = "https://github.com/droolingtaz/netbox-dlm"
Issues = "https://github.com/droolingtaz/netbox-dlm/issues"

[tool.setuptools.packages.find]
include = ["netbox_dlm*"]

[tool.setuptools.package-data]
netbox_dlm = ["templates/netbox_dlm/*.html"]
